--- a/src/pages/recipes/recipe/styles.module.scss
+++ b/src/pages/recipes/recipe/styles.module.scss
@@ -30,6 +30,10 @@
     }
 }
 
+.section.header {
+    text-transform: capitalize;
+}
+
 .title {
     margin-top: 0;
     text-align: center;
@@ -42,7 +46,7 @@
 }
 
 .ingredients {
-    width: 250px;
+    width: calc(100% - 10px);
     margin-right: 20px;
     margin-top: 15px;
     border-radius: 10px;
@@ -65,7 +69,7 @@
     cursor: pointer;
 
     &:hover {
-        border-bottom: 1px solid $atlantis;
+        border-bottom: 1px solid $deep-cerulean;
     }
 }
 
@@ -87,10 +91,13 @@ input.ingredientQuantity {
 
 .stepNumber {
     position: absolute;
+    top: 5px;
+    left: -60px;
+    width: 50px;
     font-size: 40px;
     font-weight: bold;
-    color: $atlantis;
-    left: -40px;
+    color: $malibu;
+    text-align: right;
     z-index: -1;
 }
 
@@ -118,6 +125,14 @@ input.ingredientQuantity {
     text-decoration: line-through;
 }
 
+.relatedRecipes.prev {
+    float: left;
+}
+
+.relatedRecipes.next {
+    float: right;
+}
+
 /* tablet and desktop */
 @media screen and (min-width: 760px) {
     .timing {
@@ -128,5 +143,10 @@ input.ingredientQuantity {
         display: flex;
         flex-direction: row;
         margin: 0 20px;
+    }
+
+    .ingredients {
+        min-width: 250px;
+        width: 250px;
     }
 }
