--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,17 +1,24 @@
 // all color names from http://chir.ag/projects/name-that-color
+
+// theme colors
 $alto: #dcdcdc;
 $atlantis: #9acd32;
 $black: #000000;
+$deep-cerulean: #0077B5;
+$gallery: #eeeeee;
+$gray: #808080;
+$malibu: #8ed0f9;
+$mine-shaft: #222222;
+$white: #ffffff;
+
+// logo colors
 $cerise: #d6249f;
 $cinnabar: #e03847;
 $confetti: #e9d75a;
 $deep-cerulean: #0077B5;
 $dodger-blue: #1da1f2;
-$gray: #808080;
-$mine-shaft: #222222;
 $picasso: #fdf497;
 $picton-blue: #3897f0;
 $royal-blue: #285aeb;
 $san-marino: #4267b2;
 $sunset-orange: #fd5949;
-$white: #ffffff;
