--- a/src/pages/recipes/recipe/styles.module.scss
+++ b/src/pages/recipes/recipe/styles.module.scss
@@ -9,6 +9,8 @@
 }
 
 .header {
+    display: flex;
+    flex-direction: column;
     padding: 20px;
     border-radius: 10px;
     color: $white;
@@ -43,6 +45,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.video {
+    display: none;
+    margin: 0 30px;
+    max-height: 337.5px;
+    background-color: $black;
 }
 
 .ingredients {
@@ -135,8 +144,18 @@ input.ingredientQuantity {
 
 /* tablet and desktop */
 @media screen and (min-width: 760px) {
-    .timing {
+    .header {
         flex-direction: row;
+        justify-content: space-between;
+    }
+    
+    .details {
+        max-width: 250px;
+        display: inline-block;
+    }
+
+    .video {
+        display: inherit;
     }
 
     .bodyContent {
