--- a/src/pages/magic/deck/styles.module.scss
+++ b/src/pages/magic/deck/styles.module.scss
@@ -1,29 +1,54 @@
-.deck {
-    display: flex;
+.playmat {
+    background-color: gray;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.deck,
+.sideboard {
+    display: inline-flex;
     flex-direction: column;
     flex-wrap: wrap;
+    padding-top: 10px;
     padding-bottom: 310px;
-    margin: 0 320px 0 0;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.overlay {
+    position: absolute;
+    display: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    background-color: rgba(0,0,0,0.6);
 }
 
 .cardContainer {
     position: relative;
     height: 44px;
     overflow-y: visible;
+    text-align: center;
 
     &:hover .card {
-        z-index: 2;
+        z-index: 3;
     }
 
-    &:hover .tooltip {
+    &:hover .tooltipContainer {
+        display: flex;
+        flex-direction: row;
+        z-index: 4;
+
+        &.left {
+            flex-direction: row-reverse;
+        }
+    }
+
+    &:hover ~ .overlay {
         display: block;
-        top: 0px;
-        left: 260px;
-        z-index: 3;
-        background-color: rgba(0,0,0,0.9);
-        border-radius: 5px;
-        padding: 0 10px;
-        color: white;
+        z-index: 2;
     }
 }
 
@@ -32,31 +57,211 @@
     width: 250px;
     margin: 0 5px;
     z-index: 1;
+}
+
+.tooltipContainer {
+    position: absolute;
+    display: none;
     pointer-events: none;
+    top: 350px;
+    text-align: left;
 }
 
 .tooltip {
-    position: absolute;
-    display: none;
+    display: block;
     width: 300px;
-    pointer-events: none;
+    background-color: rgba(0,0,0,0.9);
+    border-radius: 5px;
+    padding: 0 10px;
+    color: white;
 }
 
 .manaCost {
     float: right;
 }
 
+.oracleText {
+    white-space: pre-wrap;
+}
+
 .flavorText {
     font-style: italic;
 }
 
-/* tablet and desktop */
+.tooltipCard {
+    width: 250px;
+    margin: 0 5px;
+    display: none;
+}
+
+/* tablet */
 @media screen and (min-width: 760px) {
+    .playmat {
+        width: 740px;
+        text-align: unset;
+    }
+
     .deck {
-        height: 440px;
+        width: 480px;
+        height: 500px;
+    }
+
+    .sideboard {
+        width: 170px;
+        margin-left: 0px;
+
+        & .cardContainer:nth-of-type(2n) {
+            margin-left: 100px;
+
+            .tooltipContainer {
+                left: unset;
+                right: 160px;
+            }
+        }
+
+        & .cardContainer:nth-of-type(2n+1) {
+            margin-left: 0px;
+
+            .tooltipContainer {
+                left: unset;
+                right: 210px;
+            }
+        }
+    }
+
+    .cardContainer {
+        height: 25px;
+    }
+
+    .card {
+        width: 150px;
+    }
+
+    .tooltipContainer {
+        top: 0px;
+    
+        &.right {
+            left: 160px;
+        }
+    }
+}
+
+/* small desktop */
+@media screen and (min-width: 1100px) {
+    .playmat {
+        width: 1080px;
+    }
+
+    .deck {
+        width: 720px;
+        height: 450px;
+    }
+
+    .sideboard {
+        width: 270px;
+        margin-left: 50px;
+
+        & .cardContainer:nth-of-type(2n) {
+            margin-left: 100px;
+
+            .tooltipContainer {
+                right: 190px;
+            }
+        }
+
+        & .cardContainer:nth-of-type(2n+1) {
+            margin-left: 0px;
+
+            .tooltipContainer {
+                right: 240px;
+            }
+        }
+    }
+
+    .cardContainer {
+        height: 30px;
+    }
+
+    .card,
+    .tooltipCard {
+        width: 180px;
+    }
+
+    .tooltipCard {
+        display: block;
+    }
+
+    .tooltipContainer {
+        top: 0px;
+    
+        &.right {
+            left: 190px;
+        }
+    }
+}
+
+/* medium desktop */
+@media screen and (min-width: 1180px) {
+    .playmat {
+        width: 1160px;
+    }
+
+    .deck {
+        width: 770px;
+        height: 880px;
+    }
+
+    .sideboard {
+        width: 270px;
+        margin-left: 30px;
+
+        & .cardContainer:nth-of-type(2n) {
+            margin-left: 100px;
+
+            .tooltipContainer {
+                right: 260px;
+            }
+        }
+
+        & .cardContainer:nth-of-type(2n+1) {
+            margin-left: 0px;
+
+            .tooltipContainer {
+                right: 310px;
+            }
+        }
     }
 
     .cardContainer {
         height: 44px;
+    }
+
+    .card,
+    .tooltipCard {
+        width: 250px;
+    }
+
+    .tooltipContainer {
+        top: 0px;
+    
+        &.right {
+            left: 260px;
+        }
+    }
+}
+
+/* large desktop */
+@media screen and (min-width: 1460px) {
+    .playmat {
+        width: 1440px;
+    }
+
+    .deck {
+        width: 1020px;
+        height: 660px;
+    }
+
+    .sideboard {
+        margin-left: 50px;
     }
 }
