--- a/src/pages/magic/deck/styles.module.scss
+++ b/src/pages/magic/deck/styles.module.scss
@@ -1,6 +1,40 @@
-.playmat {
+@import "../../../styles/colors.scss";
+
+.content {
     background-color: gray;
+}
+
+.featured {
+    width: 320px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.featuredCard {
+    display: inline-flex;
+    flex-direction: column;
+
+    .tooltipContainer {
+        display: contents;
+        
+        .frontFace {
+            margin-top: 5px;
+        }
+    }
+}
+
+.description {
+    margin: 30px 0;
+    border-radius: 5px;
+    padding: 0 10px;
+    color: black;
+    vertical-align: top;
+}
+
+.playmat {
+    margin: 0 auto;
+    padding: 30px 0;
     text-align: center;
 }
 
@@ -54,12 +88,12 @@
 .card {
     position: relative;
     width: 250px;
-    margin: 0 5px;
+    margin: 0 auto;
     z-index: 1;
 }
 
 .cardSpacer {
-    display: inline-block;
+    display: none;
     width: 250px;
     margin: 0 5px;
 }
@@ -68,8 +102,9 @@
     position: absolute;
     display: none;
     top: 350px;
-    text-align: left;
     pointer-events: none;
+    width: 100%;
+    text-align: center;
 }
 
 .tooltip {
@@ -79,7 +114,7 @@
     background-color: rgba(0,0,0,0.9);
     border-radius: 5px;
     padding: 0 10px;
-    margin-bottom: 5px;
+    margin: 0 auto 5px;
     color: white;
     pointer-events: all;
 }
@@ -102,22 +137,58 @@
     display: none;
 }
 
-.sideboard.commander {
+.sideboard.commander,
+.sideboard.oathbreaker {
     display: none;
 }
 
 .frontFace {
     display: inline-flex;
     flex-direction: row;
+    text-align: left;
 }
 
 .backFace {
     display: none;
     flex-direction: row;
+    text-align: left;
 }
 
 /* tablet */
 @media screen and (min-width: 760px) {
+    .featured.commander {
+        width: 590px;
+
+        .card {
+            width: 250px;
+            height: 354px;
+        }
+    }
+
+    .featured.oathbreaker {
+        width: 735px;
+        flex-direction: row;
+
+        .tooltipContainer {
+            font-size: 12px;
+
+            .tooltip {
+                width: 180px;
+            }
+        }
+    }
+
+    .featuredCard {
+        flex-direction: row;
+
+        .tooltipContainer {
+            .frontFace {
+                margin-top: unset;
+                margin-left: 5px;
+            }
+        }
+    }
+    
     .playmat {
         width: 740px;
     }
@@ -127,10 +198,15 @@
         height: 500px;
     }
 
-    .deck.commander {
+    .deck.commander,
+    .deck.oathbreaker {
         height: 625px;
         width: 640px;
         padding-bottom: 200px;
+    }
+
+    .deck.oathbreaker {
+        height: 375px;
     }
 
     .sideboard {
@@ -157,10 +233,21 @@
     .tooltipCard,
     .cardSpacer {
         width: 150px;
+        height: 213px;
+    }
+
+    .card {
+        margin: 0 5px;
+    }
+
+    .cardSpacer {
+        display: inline-block;
     }
 
     .tooltipContainer {
         top: 0px;
+        text-align: left;
+        width: unset;
 
         &.left {
             right: 0;
@@ -187,14 +274,41 @@
         width: 1080px;
     }
 
+    .featured.oathbreaker {
+        width: 1075px;
+
+        .tooltipContainer {
+            font-size: unset;
+
+            .tooltip {
+                width: 320px;
+            }
+        }
+    }
+
+    .featuredCard{
+        .tooltipContainer {
+            font-size: unset;
+        }
+
+        .tooltip {
+            width: 300px;
+        }
+    }
+
     .deck {
         width: 720px;
         height: 450px;
     }
 
-    .deck.commander {
+    .deck.commander,
+    .deck.oathbreaker {
         height: 625px;
         width: 950px;
+    }
+
+    .deck.oathbreaker {
+        height: 400px;
     }
 
     .sideboard {
@@ -209,6 +323,7 @@
     .tooltipCard,
     .cardSpacer {
         width: 180px;
+        height: 255px;
     }
 
     .tooltip {
@@ -235,15 +350,30 @@
         width: 1160px;
     }
 
+    .featured.oathbreaker {
+        width: 1140px;
+
+        .tooltipContainer {
+            .tooltip {
+                width: 280px;
+            }
+        }
+    }
+
     .deck {
         width: 770px;
         height: 880px;
     }
 
-    .deck.commander {
+    .deck.commander,
+    .deck.oathbreaker {
         height: 1100px;
         width: 1050px;
         padding-bottom: 310px;
+    }
+
+    .deck.oathbreaker {
+        height: 660px;
     }
 
     .sideboard {
@@ -258,14 +388,10 @@
     .tooltipCard,
     .cardSpacer {
         width: 250px;
-    }
-
-    .cardSpacer {
         height: 354px;
     }
 
     .tooltipContainer {
-
         &.left {
             .tooltip {
                 margin-right: 0;
@@ -280,14 +406,29 @@
         width: 1440px;
     }
 
+    .featured.oathbreaker {
+        width: 1220px;
+
+        .tooltipContainer {
+            .tooltip {
+                width: 320px;
+            }
+        }
+    }
+
     .deck {
         width: 1020px;
         height: 660px;
     }
 
-    .deck.commander {
+    .deck.commander,
+    .deck.oathbreaker {
         height: 880px;
         width: 1300px;
+    }
+
+    .deck.oathbreaker {
+        height: 540px;
     }
 
     .sideboard {
