--- a/src/components/loading-spinner/styles.module.scss
+++ b/src/components/loading-spinner/styles.module.scss
@@ -7,6 +7,12 @@
     height: calc(100vh - 50px);
     background-color: rgba(0,0,0,0.7);
     z-index: 10;
+    opacity: 1;
+}
+
+.spinner.fade {
+    opacity: 0;
+    transition: opacity .75s ease-out;
 }
 
 .logoS,
@@ -56,8 +62,3 @@
         transform:rotate(-360deg);
     }
 }
-
-// animation-name: spin;
-// animation-duration: 5000ms;
-// animation-iteration-count: infinite;
-// animation-timing-function: linear;
