Fix westvale abbey flip card context, stub out next update sections

--- a/src/pages/magic/deck/styles.module.scss
+++ b/src/pages/magic/deck/styles.module.scss
@@ -154,6 +154,13 @@
     text-align: left;
 }
 
+.howToPlay,
+.sideboardingGuide {
+    margin: 30px 0;
+    height: 250px;
+    text-align: center;
+}
+
 /* tablet */
 @media screen and (min-width: 760px) {
     .featured.commander {
