stream module and a few touchups

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -12,11 +12,13 @@ $mine-shaft: #222222;
 $white: #ffffff;
 
 // logo colors
+$alizarin-crimson: #de2920;
 $cerise: #d6249f;
 $cinnabar: #e03847;
 $confetti: #e9d75a;
-$deep-cerulean: #0077B5;
+$deep-cerulean: #0077b5;
 $dodger-blue: #1da1f2;
+$electric-violet: #9147fb;
 $picasso: #fdf497;
 $picton-blue: #3897f0;
 $royal-blue: #285aeb;
