--- a/src/modules/Navigation/styles.module.scss
+++ b/src/modules/Navigation/styles.module.scss
@@ -251,6 +251,11 @@
 @media screen and (min-width: 760px) {
     .navItem {
         display: initial;
+
+        &::after {
+            content: "";
+            display: inline-block;
+        }
     }
 
     .siteNav {
