--- a/src/modules/Skills/styles.module.scss
+++ b/src/modules/Skills/styles.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/colors";
 
 .section {
-    margin: 40px auto 0;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -104,6 +104,7 @@
 @media screen and (min-width: 760px) {
     .section {
         justify-content: flex-start;
+        margin: 40px 60px 0;
     }
 
     .module {
