--- a/src/puzzles/cheese-sampler/styles.module.scss
+++ b/src/puzzles/cheese-sampler/styles.module.scss
@@ -26,6 +26,7 @@
     position: absolute;
     top: 5px;
     left: 5px;
+    color: $black;
     background-color: $white;
     padding: 2px;
     border-radius: 5px;
