--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -8,8 +8,11 @@ $deep-cerulean: #0077B5;
 $gallery: #eeeeee;
 $gray: #808080;
 $malibu: #8ed0f9;
-$mine-shaft: #222222;
+$mine-shaft: #292929;
 $white: #ffffff;
+
+// dark theme
+$cod-gray: #121212;
 
 // logo colors
 $alizarin-crimson: #de2920;
