dark theme part 2

--- a/src/modules/AboutMe/styles.module.scss
+++ b/src/modules/AboutMe/styles.module.scss
@@ -33,7 +33,7 @@ main[data-theme="light"] .link {
 }
 
 main[data-theme="dark"] .link {
-    color: $white;
+    color: $mercury;
 }
 
 .link:hover {
