--- a/src/modules/styles.scss
+++ b/src/modules/styles.scss
@@ -14,6 +14,10 @@
     background-color: $alto;
 }
 
+main[data-theme="dark"] .section:nth-of-type(2n + 1) {
+    background-color: $mine-shaft;
+}
+
 .section:nth-of-type(2n):not(:nth-of-type(2))::before {
     content: "";
     position: absolute;
@@ -23,6 +27,10 @@
     background-image: linear-gradient($alto, $white);
 }
 
+main[data-theme="dark"] .section:nth-of-type(2n):not(:nth-of-type(2))::before {
+    background-image: linear-gradient($mine-shaft, $cod-gray);
+}
+
 .section:nth-of-type(2n+1):not(:first-of-type)::before {
     content: "";
     position: absolute;
@@ -30,6 +38,10 @@
     width: 100%;
     height: 40px;
     background-image: linear-gradient($white, $alto);
+}
+
+main[data-theme="dark"] .section:nth-of-type(2n+1):not(:first-of-type)::before {
+    background-image: linear-gradient($cod-gray, $mine-shaft);
 }
 
 /* large mobile */
