--- a/src/pages/cocktails/styles.module.scss
+++ b/src/pages/cocktails/styles.module.scss
@@ -22,6 +22,10 @@
     border-bottom: 1px dotted $atlantis;
 }
 
+main[data-theme="dark"] .title {
+    color: $mercury;
+  }
+
 .ingredients {
     margin: 0;
     font-style: italic;
@@ -39,4 +43,9 @@
         border: 1px solid $black;
         box-shadow: 5px 5px 5px $black;
     }
+
+    main[data-theme="dark"] .menu {
+        border: 1px solid $mercury;
+        box-shadow: 5px 5px 5px $mercury;
+      }
 }
