--- a/src/pages/magic/deck/styles.module.scss
+++ b/src/pages/magic/deck/styles.module.scss
@@ -1,9 +1,5 @@
 @import "../../../styles/colors.scss";
 
-.content {
-    background-color: gray;
-}
-
 .featured {
     width: 320px;
     margin: 0 auto;
@@ -30,6 +26,17 @@
     padding: 0 10px;
     color: black;
     vertical-align: top;
+}
+
+.table {
+    background-color: #269;
+    background-image:
+        linear-gradient(rgba(255,255,255,.5) 2px, transparent 2px),
+        linear-gradient(90deg, rgba(255,255,255,.5) 2px, transparent 2px),
+        linear-gradient(rgba(255,255,255,.28) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(255,255,255,.28) 1px, transparent 1px);
+    background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
+    background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
 }
 
 .playmat {
