--- a/src/puzzles/yakuza-zero/styles.module.scss
+++ b/src/puzzles/yakuza-zero/styles.module.scss
@@ -26,7 +26,7 @@
 }
 
 main[data-theme="dark"] .tile {
-    border: 1px solid $white;
+    border: 1px solid $mercury;
 }
 
 main[data-theme="light"] .corner,
