--- a/src/modules/AboutMe/styles.module.scss
+++ b/src/modules/AboutMe/styles.module.scss
@@ -24,9 +24,16 @@
 }
 
 .link {
-    color: $black;
     text-decoration: none;
     border-bottom: 2px dotted $atlantis;
+}
+
+main[data-theme="light"] .link {
+    color: $black;
+}
+
+main[data-theme="dark"] .link {
+    color: $mercury;
 }
 
 .link:hover {
