fix scryfall api images and add titles

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -8,6 +8,7 @@ $deep-cerulean: #0077B5;
 $gallery: #eeeeee;
 $gray: #808080;
 $malibu: #8ed0f9;
+$matise: #1b659d;
 $mine-shaft: #292929;
 $white: #ffffff;
 
