--- a/src/pages/magic/deck/styles.module.scss
+++ b/src/pages/magic/deck/styles.module.scss
@@ -20,28 +20,51 @@
     }
 }
 
+.title {
+    display: inline-block;
+    color: $white;
+    text-align: center;
+    font-size: 112px;
+    text-transform: capitalize;
+    font-family: 'Fredericka the Great', cursive;
+    font-weight: normal;
+    margin: 0;
+}
+
 .description {
     margin: 30px 0;
     border-radius: 5px;
     padding: 0 10px;
-    color: black;
+    color: $white;
     vertical-align: top;
 }
 
 .table {
-    background-color: #269;
+    position: relative;
+    background-color: $matise;
     background-image:
-        linear-gradient(rgba(255,255,255,.5) 2px, transparent 2px),
-        linear-gradient(90deg, rgba(255,255,255,.5) 2px, transparent 2px),
-        linear-gradient(rgba(255,255,255,.28) 1px, transparent 1px),
-        linear-gradient(90deg, rgba(255,255,255,.28) 1px, transparent 1px);
+        linear-gradient(rgba(255,255,255,.20) 2px, transparent 2px),
+        linear-gradient(90deg, rgba(255,255,255,.20) 2px, transparent 2px),
+        linear-gradient(rgba(255,255,255,.15) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(255,255,255,.15) 1px, transparent 1px);
     background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
-    background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
+    background-position: 15px 15px, 15px 15px, 14px 14px, 14px 14px;
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        background-image: radial-gradient(circle at center, rgba(255,255,255,0.2) 0, rgba(255,255,255,0.1) 20%, transparent 100%);
+    }
 }
 
 .playmat {
     margin: 0 auto;
-    padding: 30px 0;
+    padding-bottom: 30px;
     text-align: center;
 }
 
@@ -58,13 +81,15 @@
 
 .overlay {
     position: fixed;
-    display: none;
+    display: block;
+    opacity: 0;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
     pointer-events: none;
     background-color: rgba(0,0,0,0.6);
+    transition: opacity 0.5s linear;
 }
 
 .cardContainer {
@@ -87,8 +112,9 @@
     }
 
     &:hover ~ .overlay {
-        display: block;
         z-index: 2;
+        opacity: 1;
+        transition: opacity 0.5s linear;
     }
 }
 
@@ -96,6 +122,7 @@
     position: relative;
     width: 250px;
     margin: 0 auto;
+    border-radius: 13px;
     z-index: 1;
 }
 
@@ -141,6 +168,7 @@
 .tooltipCard {
     width: 250px;
     margin: 0 5px;
+    border-radius: 13px;
     display: none;
 }
 
