--- a/src/pages/magic/styles.module.scss
+++ b/src/pages/magic/styles.module.scss
@@ -43,7 +43,17 @@ main[data-theme="dark"] .decks {
 }
 
 .deck {
+    position: relative;
     list-style: none;
+    display: block;
+}
+
+.deckColors {
+    display: inline;
+    float: right;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 /* tablet & up */
